--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "website for visit rwanda ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "development": "webpack serve --progress --config webpack.config.development.js",
+    "build": "webpack serve --progress --config webpack.config.build.js",
+    "start": "npm run development"
   },
   "author": "NKUSI Kevin",
   "license": "ISC",
@@ -12,6 +15,23 @@
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
-    "webpack-merge": "^5.9.0"
+    "webpack-merge": "^5.9.0",
+     "eslint": "^8.42.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-webpack-plugin": "^4.0.1"
+  },
+  "dependencies": {
+    "babel-loader": "^9.1.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.8.1",
+    "image-minimizer-webpack-plugin": "^3.8.3",
+    "mini-css-extract-plugin": "^2.7.6",
+    "postcss-loader": "^7.3.3",
+    "sass": "^1.67.0",
+    "sass-loader": "^13.3.2",
+    "terser-webpack-plugin": "^5.3.9"
   }
 }
