--- a/package.json
+++ b/package.json
@@ -5,33 +5,63 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "development": "webpack serve --progress --config webpack.config.development.js",
-    "build": "webpack serve --progress --config webpack.config.build.js",
-    "start": "npm run development"
+    "frontend:development": "webpack serve --progress --config webpack.config.development.js",
+    "frontend:build": "webpack serve --progress --config webpack.config.build.js",
+    "backend:build": "node app.js",
+    "backend:development": "nodemon app.js",
+    "dev": "concurrently --kill-others \"npm run frontend:development\" \"npm run backend:development\""
   },
   "author": "NKUSI Kevin",
   "license": "ISC",
   "devDependencies": {
+    "auto-bind": "^4.0.0",
+    "babel-loader": "^9.1.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "concurrently": "^6.1.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.8.1",
+    "eslint": "^8.42.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-standard": "^5.0.0",
+    "eslint-webpack-plugin": "^4.0.1",
+    "file-loader": "^6.2.0",
+    "glslify-loader": "^2.0.0",
+    "gsap": "^3.6.1",
+    "image-minimizer-webpack-plugin": "^3.8.3",
+    "imagemin": "^7.0.1",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^9.0.0",
+    "include-media": "^1.4.9",
+    "mini-css-extract-plugin": "^2.7.6",
+    "normalize-wheel": "^1.0.1",
+    "ogl": "^0.0.73",
+    "postcss-loader": "^7.3.3",
+    "prefix": "^1.0.0",
+    "raw-loader": "^4.0.2",
+    "sass": "^1.67.0",
+    "sass-loader": "^13.3.2",
+    "terser-webpack-plugin": "^5.3.9",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
-    "webpack-merge": "^5.9.0",
-     "eslint": "^8.42.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-webpack-plugin": "^4.0.1"
+    "webpack-merge": "^5.9.0"
   },
   "dependencies": {
-    "babel-loader": "^9.1.3",
-    "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.8.1",
-    "image-minimizer-webpack-plugin": "^3.8.3",
-    "mini-css-extract-plugin": "^2.7.6",
-    "postcss-loader": "^7.3.3",
-    "sass": "^1.67.0",
-    "sass-loader": "^13.3.2",
-    "terser-webpack-plugin": "^5.3.9"
+    "@prismicio/client": "^4.0.0",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "errorhandler": "^1.5.1",
+    "express": "^4.18.2",
+    "method-override": "^3.0.0",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.7",
+    "prismic-dom": "^2.2.5",
+    "pug": "^3.0.2",
+    "ua-parser-js": "^0.7.28"
   }
 }
